Add images into img file and link in html body element

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-
+  <main>
+    <section>
+      <img src="/img/img-dog-golden.jpg"></img>
+      <img src="/img/img-dog-pug.jpg"></img>
+      <img src="/img/img-dog-salsicha.jpg"></img>
+    </section>
+  </main>
 </body>
 
 </html>
