--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pets Page</title>
   <link rel="shortcut icon" href="/favicon/logopisadaperro.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
