--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
 <body>
   <main>
     <section>
-      <img src="/img/img-dog-golden.jpg"></img>
-      <img src="/img/img-dog-pug.jpg"></img>
-      <img src="/img/img-dog-salsicha.jpg"></img>
+      <h1>PET ACTIVITIES</h1>
+      <span>Take a closer look</span>
+      <button>VIEW ALL</button>
     </section>
+
+    <article>
+      <ul>
+        <li><img src="/img/img-dog-golden.jpg" width="400" height="400"></img></li>
+        <li><img src="/img/img-dog-pug.jpg" width="400" height="400"></img></li>
+        <li><img src="/img/img-dog-salsicha.jpg" width="400" height="400"></img></li>
+      </ul>
+    </article>
   </main>
 </body>
 
