Put the titles in the left and button in the right

--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
 
 <body>
   <main>
-    <section>
-      <h1>PET ACTIVITIES</h1>
-      <span>Take a closer look</span>
-      <button>VIEW ALL</button>
+    <section class="section-info">
+      <div class="section-info__titles">
+        <h1 class="section-info__title__firsttitle">PET ACTIVITIES</h1>
+        <span class="section-info__title__secondtitle">Take a closer look</span>
+      </div>
+      <button class="button section-info__button">VIEW ALL</button>
     </section>
-
-    <article>
+    <article class="main_article-images">
       <ul>
-        <li><img src="/img/img-dog-golden.jpg" width="400" height="400"></img></li>
-        <li><img src="/img/img-dog-pug.jpg" width="400" height="400"></img></li>
-        <li><img src="/img/img-dog-salsicha.jpg" width="400" height="400"></img></li>
+        <li><img src="/img/img-dog-golden.jpg" width="200" height="200"></img></li>
+        <li><img src="/img/img-dog-pug.jpg" width="200" height="200"></img></li>
+        <li><img src="/img/img-dog-salsicha.jpg" width="200" height="200"></img></li>
       </ul>
     </article>
   </main>
