Add hover to html structure

--- a/index.html
+++ b/index.html
@@ -18,11 +18,20 @@
       </div>
       <button class="button section-info__button">VIEW ALL</button>
     </section>
-    <article class="main_article-images">
+    <article class="main-article__images">
       <ul>
-        <li><img src="/img/img-dog-golden.jpg" width="200" height="200"></img></li>
-        <li><img src="/img/img-dog-pug.jpg" width="200" height="200"></img></li>
-        <li><img src="/img/img-dog-salsicha.jpg" width="200" height="200"></img></li>
+        <div class="main-article__images__hover">
+          <h2>activities toys playtime</h2>
+          <li><img src="/img/img-dog-golden.jpg" width="200" height="200"></img></li>
+        </div>
+        <div class="main-article__images__hover">
+          <h2>activities active rest</h2>
+          <li><img src="/img/img-dog-pug.jpg" width="200" height="200"></img></li>
+        </div>
+        <div class="main-article__images__hover">
+          <h2>activities game walks</h2>
+          <li><img src="/img/img-dog-salsicha.jpg" width="200" height="200"></img></li>
+        </div>
       </ul>
     </article>
   </main>
